- Added Element.hasAttribute