@@ -1,0 +1,1 @@
+!function(t,o){"object"==typeof exports&&"undefined"!=typeof module?module.exports=o():"function"==typeof define&&define.amd?define(o):t.Narwhal=o()}(this,function(){"use strict";var t=function(){},o=t,e=function(){},n=e,i=function(){},r=i,s=function(){},p=s,c=function(){},u=c,a=function(){};a.prototype.addEventListener=function(){},a.prototype.removeEventListener=function(){},a.prototype.dispatchEvent=function(){};var h=a,l=function(){},f=l,m=function(){},y=m,d=function(){},g=d,v=h,w=f,S=y,b=g,N=function(t){function o(o){t.call(this),this.ownerDocument=o||null,this.baseURI="",this.baseURIObject=new w,this.childNodes=new S,this.firstChild=null,this.lastChild=null,this.nextSibling=null,this.nodeName="",this.nodePrincipal=new b,this.nodeType=null,this.nodeValue="",this.parentNode=null,this.parentElement=null,this.previousSibling=null,this.rootNode=null,this.textContent=""}return t&&(o.__proto__=t),o.prototype=Object.create(t&&t.prototype),o.prototype.constructor=o,o.prototype.appendChild=function(){},o.prototype.cloneNode=function(){},o.prototype.compareDocumentPosition=function(){},o.prototype.contains=function(){},o.prototype.getRootNode=function(){},o.prototype.hasChildNodes=function(){},o.prototype.insertBefore=function(){},o.prototype.isDefaultNamespace=function(){},o.prototype.isEqualNode=function(){},o.prototype.isSameNode=function(){},o.prototype.lookupPrefix=function(){},o.prototype.lookupNamespaceURI=function(){},o.prototype.normalize=function(){},o.prototype.removeChild=function(){},o.prototype.replaceChild=function(){},o}(v),E=N,C=function(){},I=C,k=function(){},x=k,A=function(){},T=A,L=function(){},B=L,P=function(){},M=P,R=function(){},z=R,q=function(){},D=q,_=function(){},j=_,F=function(){this.length=0,this.map=[]};F.prototype.getNamedItem=function(t){for(var o=this,e=0;e<this.length;e+=1)if(o.map[e].name===t)return o.map[e];return null},F.prototype.item=function(t){return t>-1&&t<this.length?this.map[t]:null},F.prototype.setNamedItem=function(t){var o=this;if(null===this.getNamedItem(t.name))return this.length+=1,this.map.push(t),null;for(var e=0;e<this.length;e+=1)if(o.map[e].name===t.name){var n=o.map[e];return o.map[e]=t,n}},F.prototype.removeNamedItem=function(t){for(var o=this,e=0;e<this.length;e+=1)if(o.map[e].name===t){var n=o.map[e];return o.map.splice(e,1),o.length-=1,n}return null},F.prototype.getNamedItemNS=function(){},F.prototype.setNamedItemNS=function(){},F.prototype.removeNamedItemNS=function(){};var O=F,X=function(){},W=X,H=function(){},U=H,Y=function(){},V=Y,G=function(){},J=G,Q=function(t,o,e){this.name=o,this.ownerElement=t,this.value=e||null,this.namespaceURI="",this.localName="",this.prefix="",this.specified=!0},K=Q,Z=E,$=j,tt=O,ot=W,et=U,nt=V,it=J,rt=K,st=function(t){function o(o,e){t.call(this,e),this.attributes=new tt,this.nodeName=o,this.assignedSlot=new $,this.classList=new ot,this.className="",this.clientHeight=0,this.clientLeft=0,this.clientTop=0,this.clientWidth=0,this.id="",this.innerHTML="",this.localName="",this.namespaceURI=null;var n=new et;this.nextElementSibling=n.nextElementSibling,this.outerHTML="",this.prefix="",this.previousElementSibling=n.previousElementSibling,this.scrollHeight=0,this.scrollLeft=0,this.scrollLeftMax=0,this.scrollTop=0,this.scrollTopMax=0,this.scrollWidth=0,this.shadowRoot=null,this.slot=null,this.tabStop=!1,this.underMananger=new nt,this.undoScope=!1;var i=new it;this.remove=i.remove}return t&&(o.__proto__=t),o.prototype=Object.create(t&&t.prototype),o.prototype.constructor=o,o.prototype.setAttribute=function(t,o){this.attributes.setNamedItem(new rt(this,t,o))},o.prototype.getAttribute=function(t){return this.attributes.getNamedItem(t).value},o.prototype.hasAttribute=function(t){return null===this.attributes.getNamedItem(t)},o.prototype.ongotpointercapture=function(){},o.prototype.onlostpointercapture=function(){},o.prototype.onwheel=function(){},o.prototype.attachShadow=function(){},o.prototype.animate=function(){},o.prototype.closest=function(){},o.prototype.createShadowRoot=function(){},o.prototype.find=function(){},o.prototype.findAll=function(){},o.prototype.getAnimations=function(){},o.prototype.getAttributeNames=function(){},o.prototype.getAttributeNS=function(){},o.prototype.getBoundingClientRect=function(){},o.prototype.getClientRects=function(){},o.prototype.getDestinationInserstionPoints=function(){},o.prototype.getElementsByClassName=function(){},o.prototype.getElementsByTagName=function(){},o.prototype.getElementsByTagNameNS=function(){},o.prototype.hasAttributeNS=function(){},o.prototype.hasAttributes=function(){},o.prototype.insertAdjacentElement=function(){},o.prototype.insertAdjacentHTML=function(){},o.prototype.insertAdjacentText=function(){},o.prototype.matches=function(){},o.prototype.querySelector=function(){},o.prototype.querySelectorAll=function(){},o.prototype.releasePointerCapture=function(){},o.prototype.removeAttribute=function(){},o.prototype.removeAttributeNS=function(){},o.prototype.requestFullscreen=function(){},o.prototype.requestPointerLock=function(){},o.prototype.scrollIntoView=function(){},o.prototype.setAttributeNS=function(){},o.prototype.setCapture=function(){},o.prototype.setPointerCapture=function(){},o}(Z),pt=st,ct=E,ut=I,at=x,ht=T,lt=B,ft=M,mt=z,yt=D,dt=pt,gt=function(t){function o(o){t.call(this),this.defaultView=o,this.characterSet="",this.compatMode="",this.contentType="",this.doctype="",this.documentElement=null,this.documentURI="",this.hidden=!1,this.implementation=new ut,this.lastStyleSheetSet=null,this.mozSyntheticDocument=!1,this.mozFullScreenElement=null,this.mozFullScreenEnabled=!1,this.pointerLockElement=null,this.preferredStyleSheetSet="",this.scrollingElement=null,this.selectedStyleSheetSet=null,this.styleSheets=new at,this.styleSheetSets=[],this.timeline=new ht,this.undoManager=null,this.visibilityState="visible";var e=new lt;this.children=e.children,this.firstElementChild=e.firstElementChild,this.lastElementChild=e.lastElementChild,this.childElementCount=e.childElementCount,this.activeElement=null,this.body=null,this.cookie="",this.designMode="off",this.dir="rtl",this.domain="",this.embeds=[],this.forms=new ft,this.head=null,this.images=[],this.lastModified="",this.links=new ft,this.location=new mt,this.plugins=new ft,this.readyState="complete",this.referrer="",this.scripts=new ft,this.title="",this.URL="";var n=new yt;this.onabort=n.onabort,this.onanimationcancel=n.onanimationcancel,this.onanimationend=n.onanimationend,this.onanimationiteration=n.onanimationiteration,this.onanimationstart=n.onanimationstart,this.onblur=n.onblur,this.onerror=n.onerror,this.onfocus=n.onfocus,this.oncancel=n.oncancel,this.oncanplay=n.oncanplay,this.oncanplaythrough=n.oncanplaythrough,this.onchange=n.onchange,this.onclick=n.onclick,this.onclose=n.onclose,this.oncontextmenu=n.oncontextmenu,this.oncuechange=n.oncuechange,this.ondblclick=n.ondblclick,this.ondrag=n.ondrag,this.ondragend=n.ondragend,this.ondragenter=n.ondragenter,this.ondragexit=n.ondragexit,this.ondragleave=n.ondragleave,this.ondragover=n.ondragover,this.ondragstart=n.ondragstart,this.ondrop=n.ondrop,this.ondurationchange=n.ondurationchange,this.onemptied=n.onemptied,this.onended=n.onended,this.ongotpointercapture=n.ongotpointercapture,this.oninput=n.oninput,this.oninvalid=n.oninvalid,this.onkeydown=n.onkeydown,this.onkeypress=n.onkeypress,this.onkeyup=n.onkeyup,this.onload=n.onload,this.onloadeddata=n.onloadeddata,this.onloadedmetadata=n.onloadedmetadata,this.onloadend=n.onloadend,this.onloadstart=n.onloadstart,this.onlostpointercapture=n.onloadpointercapture,this.onmousedown=n.onmousedown,this.onmouseenter=n.onmouseenter,this.onmouseleave=n.onmouseleave,this.onmousemove=n.onmousemove,this.onmouseout=n.onmouseout,this.onmouseover=n.onmouseover,this.onmouseup=n.onmouseup,this.onmousewheel=n.onmousewheel,this.onpause=n.onpause,this.onplay=n.onplay,this.onplaying=n.onplaying,this.onpointerdown=n.onpointerdown,this.onpointermove=n.onpointermove,this.onpointerup=n.onpointerup,this.onpointercancel=n.onpointercancel,this.onpointerover=n.onpointerover,this.onpointerout=n.onpointerout,this.onpointerenter=n.onpointerenter,this.onpointerleave=n.onpointerleave,this.onpointerlockchange=n.onpointerlockchange,this.onpointerlockerror=n.onpointerlockerror,this.onprogress=n.onprogress,this.onratechange=n.onratechange,this.onreset=n.onreset,this.onscroll=n.onscroll,this.onseeked=n.onseeked,this.onseeking=n.onseeking,this.onselect=n.onselect,this.onselectionstart=n.onselectionstart,this.onselectionchange=n.onselectionchange,this.onshow=n.onshow,this.onsort=n.onsort,this.onstalled=n.onstalled,this.onsubmit=n.onsubmit,this.onsuspend=n.onsuspend,this.ontimeupdate=n.ontimeupdate,this.onvolumechange=n.onvolumechange,this.ontouchcancel=n.ontouchcancel,this.ontouchend=n.ontouchend,this.ontouchmove=n.ontouchmove,this.ontouchstart=n.ontouchstart,this.ontransitionend=n.ontransitionend,this.onwaiting=n.onwaiting}return t&&(o.__proto__=t),o.prototype=Object.create(t&&t.prototype),o.prototype.constructor=o,o.prototype.createElement=function(t,o){var e=String(t).toLowerCase(),n=new dt(e,this);return"object"==typeof o&&"string"==typeof o.is&&n.setAttribute("is",o.is),n},o.prototype.onafterscriptexecute=function(){},o.prototype.onbeforescriptexecute=function(){},o.prototype.oncopy=function(){},o.prototype.oncut=function(){},o.prototype.onfullscreenchange=function(){},o.prototype.onfullscreenerror=function(){},o.prototype.onpaste=function(){},o.prototype.onpointerlockchange=function(){},o.prototype.onpointerlockerror=function(){},o.prototype.onreadystatechange=function(){},o.prototype.onselectionchange=function(){},o.prototype.onwheel=function(){},o.prototype.adoptNode=function(){},o.prototype.caretPositionFromPoint=function(){},o.prototype.caretRangeFromPoint=function(){},o.prototype.createAttribute=function(){},o.prototype.createAttributeNS=function(){},o.prototype.createCDATASection=function(){},o.prototype.createComment=function(){},o.prototype.createDocumentFragment=function(){},o.prototype.createElementNS=function(){},o.prototype.createEvent=function(){},o.prototype.createNodeIterator=function(){},o.prototype.createProcessingInstruction=function(){},o.prototype.createRange=function(){},o.prototype.createTextNode=function(){},o.prototype.createTouch=function(){},o.prototype.createTouchList=function(){},o.prototype.createTreeWalker=function(){},o.prototype.elementFromPoint=function(){},o.prototype.elementsFromPoint=function(){},o.prototype.enableStyleSheetsForSet=function(){},o.prototype.exitPointerLock=function(){},o.prototype.getAnimations=function(){},o.prototype.getElementsByClassName=function(){},o.prototype.getElementsByTagName=function(){},o.prototype.getElementsByTagNameNS=function(){},o.prototype.importNode=function(){},o.prototype.registerElement=function(){},o.prototype.releaseCapture=function(){},o.prototype.mozSetImageElement=function(){},o.prototype.getElementById=function(){},o.prototype.querySelector=function(){},o.prototype.querySelectorAll=function(){},o.prototype.createExpression=function(){},o.prototype.createNSResolver=function(){},o.prototype.evaluate=function(){},o.prototype.close=function(){},o.prototype.execCommand=function(){},o.prototype.getElementsByName=function(){},o.prototype.getSelection=function(){},o.prototype.hasFocus=function(){},o.prototype.open=function(){},o.prototype.queryCommandEnabled=function(){},o.prototype.queryCommandIndeterm=function(){},o.prototype.queryCommandState=function(){},o.prototype.queryCommandSupported=function(){},o.prototype.queryCommandValue=function(){},o.prototype.write=function(){},o.prototype.writeln=function(){},o}(ct),vt=gt,wt=function(){},St=wt,bt=function(){},Nt=bt,Et=function(){},Ct=Et,It=function(){},kt=It,xt=function(){},At=xt,Tt=function(){},Lt=Tt,Bt=function(){},Pt=Bt,Mt=function(){},Rt=Mt,zt=function(){},qt=zt,Dt=function(){},_t=Dt,jt=function(){},Ft=jt,Ot=function(){},Xt=Ot,Wt=function(){},Ht=Wt,Ut=function(){},Yt=Ut,Vt=function(){},Gt=Vt,Jt=function(){},Qt=Jt,Kt=function(){},Zt=Kt,$t=function(){},to=$t,oo=function(){},eo=oo,no=function(){},io=no,ro=function(){},so=ro,po=function(){},co=po,uo=function(){},ao=uo,ho=function(){},lo=ho,fo=o,mo=n,yo=r,go=p,vo=u,wo=vt,So=St,bo=z,No=Nt,Eo=Ct,Co=kt,Io=At,ko=Lt,xo=Pt,Ao=Rt,To=qt,Lo=_t,Bo=Ft,Po=Xt,Mo=Ht,Ro=Yt,zo=Gt,qo=h,Do=Qt,_o=Zt,jo=to,Fo=eo,Oo=io,Xo=so,Wo=co,Ho=ao,Uo=lo,Yo=function(){this.document=new wo(this),this.self=this,this.window=this,this.closed=!1,this.console=new mo,this.controllers=new yo,this.crypto=new go,this.devicePixelRatio=null,this.dialogArguments=new vo,this.frameElement=null,this.frames=[this],this.fullScreen=!1,this.history=new So,this.innerHeight="",this.innerWidth="",this.length=this.frames.length,this.location=new bo,this.locationbar=new No,this.localStorage=new Eo,this.menubar=new Co,this.messageManager=new Io,this.mozAnimationStartTime=0,this.mozInnerScreenX=0,this.mozInnerScreenY=0,this.mozPaintCount=0,this.name="",this.navigator=new ko,this.opener=null,this.outerHeight=0,this.outerWidth=0,this.pageXOffset=this.scrollX,this.pageYOffset=this.scrollY,this.sessionStorage=new Eo,this.parent=null,this.performance={mark:function(){},now:function(){},timing:new xo,navigation:new Ao,memory:null},this.personalbar=new To,this.returnValue=null,this.screen=new Lo,this.screenX="",this.screenY="",this.scrollbars=new Bo,this.scrollMaxX=0,this.scrollMaxY=0,this.scrollX=0,this.scrollY=0,this.sidebar=new Po,this.speechSynthesis=new Mo,this.status="",this.statusbar=new Ro,this.toolbar=new zo,this.top=null;var t=new fo;this.caches=t.caches,this.indexedDB=t.indexedDB,this.isSecureContext=t.isSecureContext,this.origin=t.origin;var o=new qo;this.addEventListener=o.addEventListener(),this.atob=t.atob,this.btoa=t.btoa,this.clearInterval=t.clearInterval,this.clearTimeout=t.clearTimeout,this.createImageBitmap=t.createImageBitmap,this.fetch=t.fetch,this.removeEventListener=o.removeEventListener,this.setTimeout=t.setTimeout,this.DOMParser=Do,this.GeckoActiveXOBject=_o,this.Image=jo,this.Option=Fo,this.QueryInterface=Oo,this.XMLSerializer=Xo,this.Worker=Wo,this.XPCNativeWrapper=Ho,this.XPCSafeJSObjectWrapper=Uo};Yo.prototype.alert=function(){},Yo.prototype.blur=function(){},Yo.prototype.cancelIdleCallback=function(){},Yo.prototype.clearImmediate=function(){},Yo.prototype.close=function(){},Yo.prototype.confirm=function(){},Yo.prototype.dispatchEvent=function(){},Yo.prototype.dump=function(){},Yo.prototype.find=function(){},Yo.prototype.focus=function(){},Yo.prototype.getAttention=function(){},Yo.prototype.getComputedStyle=function(){},Yo.prototype.getDefaultComputedStyle=function(){},Yo.prototype.getSelection=function(){},Yo.prototype.matchMedia=function(){},Yo.prototype.minimize=function(){},Yo.prototype.moveBy=function(){},Yo.prototype.moveTo=function(){},Yo.prototype.mozRequestAnimationFrame=function(){},Yo.prototype.open=function(){},Yo.prototype.openDialog=function(){},Yo.prototype.postMessage=function(){},Yo.prototype.print=function(){},Yo.prototype.prompt=function(){},Yo.prototype.requestIdleCallback=function(){},Yo.prototype.resizeBy=function(){},Yo.prototype.resizeTo=function(){},Yo.prototype.restore=function(){},Yo.prototype.scroll=function(){},Yo.prototype.scrollBy=function(){},Yo.prototype.scrollByLines=function(){},Yo.prototype.scrollByPages=function(){},Yo.prototype.scrollTo=function(){},Yo.prototype.setCursor=function(){},Yo.prototype.setImmediate=function(){},Yo.prototype.setResizeable=function(){},Yo.prototype.showModalDialog=function(){},Yo.prototype.sizeToContent=function(){},Yo.prototype.stop=function(){},Yo.prototype.updateCommands=function(){};var Vo=Yo,Go=Vo,Jo={Window:Go};return Jo});
